--- a/static/slides/arrays-and-vectors.html
+++ b/static/slides/arrays-and-vectors.html
@@ -26,19 +26,22 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#/slide-org3d9c432">Objectives</a></li>
-<li><a href="#/slide-org852aa29">C-Style Arrays</a></li>
-<li><a href="#/slide-orged272df">C-Style Arrays, initialization</a></li>
-<li><a href="#/slide-org98a3c6b">Vectors</a></li>
-<li><a href="#/slide-orga308065">Vector initializations</a></li>
+<li><a href="#/slide-org11105b8">Objectives</a></li>
+<li><a href="#/slide-org1ae8832">C-Style Arrays</a></li>
+<li><a href="#/slide-org0dab087">C-Style Arrays, initialization</a></li>
+<li><a href="#/slide-orgd56c9b1">Vectors</a></li>
+<li><a href="#/slide-org204fb65">Vector initializations</a></li>
+<li><a href="#/slide-orgc798e05">Looping</a></li>
+<li><a href="#/slide-orgd21706d">Style</a></li>
+<li><a href="#/slide-orgf78d6ee">Pairs</a></li>
 </ul>
 </div>
 </div>
 </section>
 
 <section>
-<section id="slide-org3d9c432">
-<h2 id="org3d9c432">Objectives</h2>
+<section id="slide-org11105b8">
+<h2 id="org11105b8">Objectives</h2>
 <ul>
 <li>Be able to describe the differences between C-style arrays and Vectors</li>
 <li>Use built-in methods to manipulate C++ Vectors</li>
@@ -48,8 +51,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org852aa29">
-<h2 id="org852aa29">C-Style Arrays</h2>
+<section id="slide-org1ae8832">
+<h2 id="org1ae8832">C-Style Arrays</h2>
 <ul>
 <li>A C-style array is simply a block of contiguous memory.</li>
 <li>First element is always 0.</li>
@@ -80,8 +83,8 @@ for(i=0; i&lt;100; ++i) {
 </section>
 </section>
 <section>
-<section id="slide-orged272df">
-<h2 id="orged272df">C-Style Arrays, initialization</h2>
+<section id="slide-org0dab087">
+<h2 id="org0dab087">C-Style Arrays, initialization</h2>
 <ul>
 <li>You can initialize arrays inline in C if you need to.</li>
 <li>Note that uninitialized items are <b>undefined</b>!
@@ -102,8 +105,8 @@ char suits[4] = "SHCD"; // Spades, Hearts, Clubs, Diamonds
 </section>
 </section>
 <section>
-<section id="slide-org98a3c6b">
-<h2 id="org98a3c6b">Vectors</h2>
+<section id="slide-orgd56c9b1">
+<h2 id="orgd56c9b1">Vectors</h2>
 <ul>
 <li>Vectors in C++ are awesome.  Use them unless you have good reason not to.
 <ul>
@@ -134,8 +137,8 @@ for(int i=0; i&lt;N; ++i) {
 </section>
 </section>
 <section>
-<section id="slide-orga308065">
-<h2 id="orga308065">Vector initializations</h2>
+<section id="slide-org204fb65">
+<h2 id="org204fb65">Vector initializations</h2>
 <ul>
 <li>The constructor can initialize the vector for you.
 <ul>
@@ -150,7 +153,103 @@ for(int i=0; i&lt;N; ++i) {
 
 <pre><code class="C++" data-line-numbers>vector&lt;int&gt; foo(100);
 vector&lt;int&gt; foo(500,123);
+</code></pre>
+</div>
 
+<ul>
+<li>You can use <code>foo.reserve(1000)</code> to pre-allocate space.</li>
+
+</ul>
+
+</section>
+</section>
+<section>
+<section id="slide-orgc798e05">
+<h2 id="orgc798e05">Looping</h2>
+<ul>
+<li>C Style</li>
+
+</ul>
+
+<div class="org-src-container">
+
+<pre><code class="C++" data-line-numbers>int sum=0;
+for(i = 0; i&lt;foo.size(); ++i)
+  sum += foo[i]:
+</code></pre>
+</div>
+
+<ul>
+<li>Iterator Style</li>
+
+</ul>
+
+<div class="org-src-container">
+
+<pre><code class="C++" data-line-numbers>int sum=0;
+for(auto i = foo.begin(); i != foo.end(); ++i)
+  sum += *i;
+</code></pre>
+</div>
+
+<ul>
+<li>Reverse Iterator Style</li>
+
+</ul>
+
+<div class="org-src-container">
+
+<pre><code class="C++" data-line-numbers>int sum=0;
+for(auto i = foo.rbegin(); i != foo.rend(); ++i)
+  sum += *i;
+</code></pre>
+</div>
+
+</section>
+</section>
+<section>
+<section id="slide-orgd21706d">
+<h2 id="orgd21706d">Style</h2>
+<ul>
+<li>Certain types come up a lot, so some standard <code>typedefs</code> have evolved:</li>
+
+</ul>
+
+<div class="org-src-container">
+
+<pre><code class="C++" data-line-numbers>typedef vector&lt;int&gt; vi;
+typedef vector&lt;vi&gt; vvi;
+</code></pre>
+</div>
+
+</section>
+</section>
+<section>
+<section id="slide-orgf78d6ee">
+<h2 id="orgf78d6ee">Pairs</h2>
+<ul>
+<li>It is often convenient to define tuples as well.</li>
+
+</ul>
+
+<div class="org-src-container">
+
+<pre><code class="C++" data-line-numbers>pair&lt;int,int&gt; coord;
+
+coord.first = 10;
+coord.second = 999;
+</code></pre>
+</div>
+
+<ul>
+<li>We have standard <code>typedefs</code> for them too.</li>
+
+</ul>
+
+<div class="org-src-container">
+
+<pre><code class="C++" data-line-numbers>typedef pair&lt;int,int&gt; ii;
+typedef vector&lt;ii&gt; vii;
 </code></pre>
 </div>
 </section>
